[package]
name = "search_parser"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nom = "7.0"
time = { version = "0.3", features = ["serde", "local-offset", "formatting", "parsing"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.9"
lazy_static = "1.4"
thiserror = "1.0"
ip_network = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
itertools = "0.13"
ureq = { version = "2.8", features = ["json"] }
inventory = "0.3"
roaring = { version = "0.10.6", features = [] }
static_assertions = "1.1.0"
patricia_tree = "0.8.0"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
tracing = { version = "*", features = ["max_level_trace", "release_max_level_error"] }
criterion = { version = "0.5", features = ["html_reports"] }
fake = { version = "2.8.0", features = ["time", "uuid", "semver", "derive"] }
rand = { version = "0.8.5", features = ["rand_chacha"] }
rand_chacha = "0.3.1"

[[bench]]
name = "tokenizer"
harness = false
opt-level = 3
codegen-units = 1
lto = false
rustflags = ["-C", "target-cpu=native"]

[lib]
name = "search_parser"
path = "src/lib.rs"

[[bin]]
name = "search_parser_bin"
path = "src/main.rs"
